[package]
name = "spirv-compiler"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
description = "Convenience wrapper for shaderc in Rust"
repository = "https://github.com/meirbon/spirv-compiler"
edition = "2018"
license = "Apache-2.0"
readme = "./README.md"
keywords = ["shader", "compiler", "spirv", "glsl", "hlsl"]

[dependencies]
shaderc = "0.7"